@@ -7,19 +7,33 @@ EXTRA_DIST = \
 	examples/checkbox/* \
 	examples/chooser/* \
 	examples/combobox/* \
-	examples/editor/* \
+	examples/comboboxentry/* \
+	examples/comboboxtext/* \
+	examples/edit/* \
 	examples/entry/* \
 	examples/frame/* \
 	examples/glade/* \
 	examples/hbox/* \
+	examples/hscale/* \
+	examples/hseparator/* \
 	examples/list/* \
+	examples/menu/* \
 	examples/menubar/* \
+	examples/menuitem/* \
+	examples/menuitemseparator/* \
 	examples/miscellaneous/* \
 	examples/notebook/* \
 	examples/pixmap/* \
 	examples/progressbar/* \
 	examples/radiobutton/* \
+	examples/spinbutton/* \
+	examples/statusbar/* \
 	examples/table/* \
 	examples/text/* \
+	examples/timer/* \
+	examples/togglebutton/* \
 	examples/tree/* \
-	examples/vbox/*
+	examples/vbox/* \
+	examples/vscale/* \
+	examples/vseparator/* \
+	examples/window/*
